<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.MainActivity"
    tools:ignore="AlwaysShowAction">

    <group android:id="@+id/menu_group_on_line">
        <item
            android:id="@+id/menu_change_source"
            android:icon="@drawable/ic_exchange"
            android:title="@string/change_origin"
            app:showAsAction="always" />

        <item
            android:id="@+id/menu_refresh"
            android:icon="@drawable/ic_refresh_black_24dp"
            android:title="@string/refresh"
            app:showAsAction="always" />

        <item
            android:id="@+id/menu_download"
            android:icon="@drawable/ic_download_line"
            android:title="@string/offline_cache"
            app:showAsAction="always" />

    </group>

    <group android:id="@+id/menu_group_text">
        <item
            android:id="@+id/menu_toc_regex"
            android:icon="@drawable/ic_exchange"
            android:title="@string/txt_toc_regex"
            android:visible="false"
            app:showAsAction="always" />
    </group>

    <group android:id="@+id/menu_group_local">

        <item
            android:id="@+id/menu_set_charset"
            android:icon="@drawable/ic_translate"
            android:title="@string/set_charset"
            app:showAsAction="always" />

    </group>

    <item
        android:id="@+id/menu_add_bookmark"
        android:title="@string/bookmark_add"
        app:showAsAction="never" />

    <group android:id="@+id/menu_group_login">
        <item
            android:id="@+id/menu_login"
            android:visible="false"
            android:title="@string/login"
            app:showAsAction="never" />
    </group>

    <group android:id="@+id/menu_group_on_line_ns">

        <item
            android:id="@+id/menu_disable_book_source"
            android:title="@string/disable_book_source"
            app:showAsAction="never" />

    </group>

    <item
        android:id="@+id/menu_copy_text"
        android:title="@string/copy_text"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_page_anim"
        android:title="@string/book_page_anim"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_get_progress"
        android:title="@string/get_book_progress"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_enable_replace"
        android:title="@string/replace_rule_title"
        android:checkable="true"
        android:checked="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_re_segment"
        android:title="@string/re_segment"
        android:checkable="true"
        android:checked="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_update_toc"
        android:title="@string/update_toc"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_book_info"
        android:title="@string/book_info"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_help"
        android:title="@string/help"
        app:showAsAction="never" />

</menu>
