<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_replace"
        android:title="@string/replace" />

    <item
        android:id="@+id/menu_copy"
        android:title="@android:string/copy" />

    <item
        android:id="@+id/menu_bookmark"
        android:title="@string/bookmark" />

    <item
        android:id="@+id/menu_aloud"
        android:title="@string/read_aloud" />

    <item
        android:id="@+id/menu_dict"
        android:title="@string/dict" />

    <item
        android:id="@+id/menu_search_content"
        android:title="@string/search_content"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_browser"
        android:title="@string/browser"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_share_str"
        android:title="@string/share"
        app:showAsAction="never" />
</menu>