<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_share_it"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_refresh"
        android:title="@string/refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_copy_book_url"
        android:title="@string/copy_book_url"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_copy_toc_url"
        android:title="@string/copy_toc_url"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_can_update"
        android:title="@string/allow_update"
        android:checkable="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_clear_cache"
        android:title="@string/clear_cache"
        app:showAsAction="never" />

</menu>