<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <io.legado.app.lib.theme.prefs.ATESwitchPreference
        android:defaultValue="false"
        android:key="@string/pk_auto_refresh"
        android:summary="@string/ps_auto_refresh"
        android:title="@string/pt_auto_refresh"
        app:iconSpaceReserved="false" />

    <io.legado.app.lib.theme.prefs.ATESwitchPreference
        android:defaultValue="false"
        android:key="@string/pk_default_read"
        android:summary="@string/ps_default_read"
        android:title="@string/pt_default_read"
        app:iconSpaceReserved="false" />

    <io.legado.app.lib.theme.prefs.ATESwitchPreference
        android:defaultValue="true"
        android:key="showRss"
        android:title="@string/show_rss"
        app:iconSpaceReserved="false" />

    <Preference
        android:key="threadCount"
        android:title="@string/threads_num_title"
        app:iconSpaceReserved="false" />

    <Preference
        android:key="downloadPath"
        android:title="@string/download_path"
        app:iconSpaceReserved="false" />

    <Preference
        android:key="cleanCache"
        android:title="@string/cleanCache"
        app:iconSpaceReserved="false" />

    <io.legado.app.lib.theme.prefs.ATESwitchPreference
        android:defaultValue="true"
        android:key="process_text"
        android:summary="@string/add_to_text_context_menu_s"
        android:title="@string/add_to_text_context_menu_t"
        app:iconSpaceReserved="false" />

    <io.legado.app.lib.theme.prefs.ATESwitchPreference
        android:defaultValue="false"
        android:key="recordLog"
        android:title="@string/record_log"
        app:iconSpaceReserved="false" />

    <io.legado.app.lib.theme.prefs.ATEListPreference
        android:defaultValue="0"
        android:key="isChineseConverterEnable"
        android:entries="@array/chinese_mode"
        android:entryValues="@array/chinese_mode_v"
        android:title="@string/is_chinese_converter_enable"
        app:iconSpaceReserved="false" />

</androidx.preference.PreferenceScreen>