<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/menu_select_action"
        android:icon="@drawable/ic_select_all"
        android:title="@string/select_action"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction">

        <menu>

            <item
                android:id="@+id/menu_select_all"
                android:title="@string/select_all"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_revert_selection"
                android:title="@string/revert_selection"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_enable_selection"
                android:title="@string/enable_selection"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_disable_selection"
                android:title="@string/disable_selection"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_del_selection"
                android:title="@string/del_select"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_export_selection"
                android:title="@string/export_selection"
                app:showAsAction="never" />

        </menu>

    </item>

    <item
        android:id="@+id/menu_group"
        android:icon="@drawable/ic_groups"
        android:title="@string/menu_action_group"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction">

        <menu>

            <item
                android:id="@+id/menu_group_manage"
                android:title="@string/group_manage" />

            <group android:id="@+id/source_group">

            </group>

        </menu>

    </item>

    <item
        android:id="@+id/menu_add"
        android:icon="@drawable/ic_add"
        android:title="@string/add_rss_source"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_import_source_local"
        android:icon="@drawable/ic_import"
        android:title="@string/import_book_source_local"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_import_source_onLine"
        android:icon="@drawable/ic_import"
        android:title="@string/import_book_source_on_line"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_import_source_qr"
        android:icon="@drawable/ic_import"
        android:title="@string/import_by_qr_code"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_share_wifi"
        android:icon="@drawable/ic_share"
        android:title="@string/wifi_share"
        app:showAsAction="never" />

</menu>
